# diffbot2_robot

./: README.md  diffbot2.repos
.github/workflows/: action-ros-ci.yaml  action-ros-lint.yaml
diffbot2_bringup/: CMakeLists.txt  package.xml
diffbot2_control/: CMakeLists.txt  package.xml
diffbot2_description/: CMakeLists.txt  package.xml
diffbot2_description/launch/: spawn_robot.launch.py  view_robot.launch.py
diffbot2_description/rviz/: view_robot.rviz
diffbot2_description/test/: spawn_robot.test.py
diffbot2_description/urdf/: diffbot2.xacro  wheel.xacro
diffbot2_navigation/: CMakeLists.txt  package.xml
diffbot2_perception/: CMakeLists.txt  package.xml
diffbot2_robot/: CMakeLists.txt  package.xml
diffbot2_tests/: CMakeLists.txt  package.xml
